@@ -3,7 +3,11 @@ join in and help us correct one or more of these! Also be sure to check the
 changelog of the current development status, as one or more of these problems
 may have been fixed since this was written!
 
-34. The SOCKS connection codes don't properly acknowledge (connect) timeouts.
+35. Both SOCKS5 and SOCKS4 proxy connections are done blocking, which is very
+  bad when used with the multi interface.
+
+34. The SOCKS4 connection codes don't properly acknowledge (connect) timeouts.
+  Also see #12.
 
 33. Doing multi-pass HTTP authentication on a non-default port does not work.
   This happens because the multi-pass code abuses the redirect following code
@@ -92,7 +96,7 @@ may have been fixed since this was written!
 
 12. When connecting to a SOCKS proxy, the (connect) timeout is not properly
   acknowledged after the actual TCP connect (during the SOCKS "negotiate"
-  phase). Pointed out by Lucas. Fix: need to select() and timeout properly.
+  phase).
 
 11. Using configure --disable-[protocol] may cause 'make test' to fail for
   tests using the disabled protocol(s).
