@@ -18,6 +18,8 @@ This release includes the following changes:
 
 This release includes the following bugfixes:
 
+ o SOCKS5 proxy connects can now time-out
+ o SOCKS5 connects that require auth no longer segfaults when auth not given
  o multi interface using asynch resolves could get stuck in wrong state
  o the 'running_handles' counter wasn't always updated properly when
    curl_multi_remove_handle() was used
